# Project-RubicsCube

./: CMakeLists.txt  main.cpp
Model/: RubiksCube.cpp
